Fix | Overlapping navbar ketika link

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-padding-top: 65px; /* height of sticky header */
+}
+
 body {
   background-color: #0c0d0e;
   color: white;
@@ -125,7 +129,7 @@ body {
 }
 
 #about {
-  padding-top: 50px;
+  padding-top: 10px;
   padding-bottom: 50px;
 }
 
